--- a/po/sl.po
+++ b/po/sl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: LXTask 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-06 15:47+0200\n"
-"PO-Revision-Date: 2011-02-04 23:46+0200\n"
+"PO-Revision-Date: 2011-02-04 23:51+0200\n"
 "Last-Translator: Klemen <klemen913@gmail.com>\n"
 "Language-Team: Slovenian <paxmanpwnz@gmail.com>\n"
 "Language: sl\n"
@@ -196,8 +196,8 @@ msgstr ""
 #: ../src/interface.c:367
 msgid "translator-credits"
 msgstr ""
-"Klemen Košir https://launchpad.net/~klemen913\n"
-"paxman, paxmanpwnz@gmail.com"
+"Klemen Košir <https://launchpad.net/~klemen913>\n"
+"paxman <paxmanpwnz@gmail.com>"
 
 #: ../src/interface.c:375
 msgid "LXTask"
