--- a/po/tr.po
+++ b/po/tr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-05 05:47+0000\n"
-"PO-Revision-Date: 2010-09-06 00:06+0200\n"
-"Last-Translator: Mehmet Gülmen <memetgulmen@gmail.com>\n"
+"PO-Revision-Date: 2011-03-10 23:24+0200\n"
+"Last-Translator: alpertekinalp <alper.tekinalp@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Pootle 2.0.1\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -38,14 +38,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"%d kimlikli göreve %d uyarısı gönderilemedi\n"
+"%d uyarısı %d kimlikli göreve gönderilemedi\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:402
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "%d kimlikli göreve %d önceliği atanamadı"
+msgstr "%d önceliği %d kimlikli göreve %d önceliği atanamadı"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -58,7 +58,7 @@ msgstr "Görevi gerçekten sonlandırmak istiyor musunuz?"
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Bellek: %d MB'ın %d MB'ı kullanıldı"
+msgstr "Bellekte Kullanılan: %d MB Toplam: %d MB "
 
 #: ../src/functions.c:157
 #, c-format
@@ -228,4 +228,3 @@ msgstr "Hata:"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Onayla"
-
