--- a/po/tr.po
+++ b/po/tr.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-05 05:47+0000\n"
-"PO-Revision-Date: 2011-03-10 23:24+0200\n"
-"Last-Translator: alpertekinalp <alper.tekinalp@gmail.com>\n"
+"PO-Revision-Date: 2011-03-17 21:01+0200\n"
+"Last-Translator: enginmanap <enginmanap@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
@@ -223,7 +223,7 @@ msgstr "Yenileme oranı (saniye):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr "Hata:"
+msgstr "Hata"
 
 #: ../src/utils.c:56
 msgid "Confirm"
