--- a/po/nb.po
+++ b/po/nb.po
@@ -8,26 +8,27 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.3.2svn-r02842\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-06 15:47+0200\n"
-"PO-Revision-Date: 2007-07-02 00:37+0200\n"
-"Last-Translator: Terje Uriansrud <ter@operamail.com>\n"
+"PO-Revision-Date: 2011-03-28 11:59+0200\n"
+"Last-Translator: Sam <wilsonsamm@hotmail.com>\n"
 "Language-Team: Norwegian Bokmal\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Håndter kjørende prosesser"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Prosesshåndtering"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-oppgavebehandler"
+msgstr "Oppgavebehandler"
 
 #: ../src/xfce-taskmanager-linux.c:385
 #, c-format
@@ -36,11 +37,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Klarte ikke sende %d-signal til prosessen %d.\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:399
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Klarte ikke gi prioritet %d til prosessen %d."
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
