--- a/po/pt.po
+++ b/po/pt.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-28 23:07+0200\n"
-"PO-Revision-Date: 2010-09-22 11:43-0000\n"
-"Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
+"PO-Revision-Date: 2011-05-14 02:22+0200\n"
+"Last-Translator: Sérgio <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese PT\n"
-"Language: \n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 1.1.0\n"
+"X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Language: Portuguese\n"
 "X-Poedit-Country: PORTUGAL\n"
 
@@ -51,11 +51,11 @@ msgstr "Não foi possível definir a prioridade %d para a tarefa com a ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr "Neutralizar a tarefa ?"
+msgstr "Terminar a tarefa ?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr "Terminar a tarefa ?"
+msgstr "Tem a certeza que quer terminar a tarefa ?"
 
 #: ../src/functions.c:148
 #, c-format
@@ -196,7 +196,7 @@ msgstr ""
 msgid "translator-credits"
 msgstr ""
 "Álvaro Morais <alvarommorais@gmail.com>\n"
-"Sérgio Marques<smarquespt@gmail.com>"
+"Sérgio Marques <smarquespt@gmail.com>"
 
 #: ../src/interface.c:380 ../src/interface.c:382
 msgid "LXTask"
