--- a/po/nl.po
+++ b/po/nl.po
@@ -1,22 +1,23 @@
-# Dutch translations for xfce package.
-# Copyright (C) 2007 THE xfce'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the xfce package.
-# Stephan Arts <stephan@xfce.org>, 2007.
-#
+# Dutch translation of the lxtask package.
+# Copyright (C) the author of the lxtask package.
+# This file is distributed under the same license as the 
+# lxtask package.
+# Stephan Arts, 2007.
+# Pjotr, 2011.
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce 4-taskmanager\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-04-28 23:07+0200\n"
-"PO-Revision-Date: 2011-06-02 23:57+0200\n"
-"Last-Translator: Pjotr <>\n"
-"Language-Team: Dutch <vertaling@vrijschrift.org>\n"
-"Language: nl\n"
+"POT-Creation-Date: 2011-05-27 04:04+0000\n"
+"PO-Revision-Date: 2011-06-13 11:34+0200\n"
+"Last-Translator: Pjotr\n"
+"Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -166,11 +167,11 @@ msgstr "   10"
 
 #: ../src/interface.c:320
 msgid "Show user tasks"
-msgstr "Toon gebruikertaken"
+msgstr "Toon gebruikerstaken"
 
 #: ../src/interface.c:325
 msgid "Show root tasks"
-msgstr "Toon beheerdertaken (root)"
+msgstr "Toon beheerderstaken (root)"
 
 #: ../src/interface.c:330
 msgid "Show other tasks"
@@ -185,13 +186,14 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask is afgeleid van de Xfce4-Taakbeheerder door:\n"
+"LXTask is afgeleid van de Xfce4 Taakbeheerder door:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:371
 msgid "translator-credits"
-msgstr "Sander De Voogdt <celettu@gmail.com>, Pjotr"
+msgstr "Sander De Voogdt\n"
+"Pjotr"
 
 #: ../src/interface.c:380 ../src/interface.c:382
 msgid "LXTask"
@@ -204,7 +206,7 @@ msgstr "Auteursrecht (C) 2008 LXDE-ploeg"
 
 #: ../src/interface.c:386
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lichtgewicht taakbeheerder voor LXDE-project"
+msgstr "Lichtgewicht taakbeheerder voor het LXDE-project"
 
 #: ../src/interface.c:595
 msgid "Preferences"
