--- a/po/nl.po
+++ b/po/nl.po
@@ -4,19 +4,19 @@
 # lxtask package.
 # Stephan Arts, 2007.
 # Pjotr, 2011.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-27 04:04+0000\n"
+"POT-Creation-Date: 2011-06-27 19:22+0200\n"
 "PO-Revision-Date: 2011-06-13 11:34+0200\n"
 "Last-Translator: Pjotr\n"
 "Language-Team: Dutch\n"
+"Language: nl (Dutch)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nl (Dutch)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../lxtask.desktop.in.h:1
@@ -192,7 +192,8 @@ msgstr ""
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:371
 msgid "translator-credits"
-msgstr "Sander De Voogdt\n"
+msgstr ""
+"Sander De Voogdt\n"
 "Pjotr"
 
 #: ../src/interface.c:380 ../src/interface.c:382
