--- a/po/be.po
+++ b/po/be.po
@@ -8,28 +8,28 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-27 19:22+0200\n"
-"PO-Revision-Date: 2010-08-25 16:15+0200\n"
-"Last-Translator: Анік <xabzan9tka@gmail.com>\n"
+"PO-Revision-Date: 2011-08-07 16:11+0200\n"
+"Last-Translator: Мікалай <crom-a@tut.by>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: be\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr "Кіраванне запушчанымі працэссамі"
+msgstr "Кіраванне бягучымі працэсамі"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr "Мэнэджар працэсаў"
+msgstr "Менеджар працэсаў"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:55
 msgid "Task Manager"
-msgstr "Дыспетчар задач"
+msgstr "Менеджар задач"
 
 #: ../src/xfce-taskmanager-linux.c:406
 #, c-format
@@ -38,14 +38,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Не магчыма паслаць сігнал %d працэсу з ID %d\n"
+"Немагчыма даслаць сігнал %d працэсу з ID %d\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:420
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Не магчыма ўсталяваць прыарытэт  %d для працэсу з ID %d"
+msgstr "Немагчыма ўстанавіць прыярытэт  %d для працэса з ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -53,21 +53,21 @@ msgstr "Сапраўды завяршыць гэты працэс?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr "Сапраўды прырваць гэты працэс?"
+msgstr "Сапраўды закончыць гэты працэс?"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Памяць: %d MB з %d MB выкарыстоўваецца"
+msgstr "Памяць: %d MB з %d MB ужыта"
 
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "Працэсар выкарыстоўваецца на %0.0f %%"
+msgstr "Загрузка працэсара: %0.0f %%"
 
 #: ../src/interface.c:69
 msgid "_File"
-msgstr "_Файл"
+msgstr "Ф_айл"
 
 #: ../src/interface.c:77
 msgid "_View"
@@ -75,11 +75,11 @@ msgstr "_Выгляд"
 
 #: ../src/interface.c:83
 msgid "_Help"
-msgstr "_Дапамога"
+msgstr "_Даведка"
 
 #: ../src/interface.c:110
 msgid "cpu usage"
-msgstr "выкарыстанне працэсара"
+msgstr "загрузка працэсара"
 
 #: ../src/interface.c:121
 msgid "memory usage"
@@ -119,7 +119,7 @@ msgstr "Стан"
 
 #: ../src/interface.c:220
 msgid "Prio"
-msgstr "Прыарытэт"
+msgstr "Прыярытэт"
 
 #: ../src/interface.c:226
 msgid "PPID"
@@ -143,7 +143,7 @@ msgstr "Забіць"
 
 #: ../src/interface.c:262
 msgid "Priority"
-msgstr "Прыарытэт"
+msgstr "Прыярытэт"
 
 #: ../src/interface.c:275
 msgid "  -10"
@@ -167,32 +167,34 @@ msgstr "   10"
 
 #: ../src/interface.c:320
 msgid "Show user tasks"
-msgstr "Паказаць працэсы карыстальніка"
+msgstr "Працэсы карыстальніка"
 
 #: ../src/interface.c:325
 msgid "Show root tasks"
-msgstr "Паказаць працэсы суперкарыстальніка"
+msgstr "Працэсы суперкарыстальніка"
 
 #: ../src/interface.c:330
 msgid "Show other tasks"
-msgstr "Паказаць іншыя працэсы"
+msgstr "Іншыя працэсы"
 
 #: ../src/interface.c:335
 msgid "Show memory used by cache as free"
-msgstr "Паказаць памяці, што выкарыстоўваецца пад кэш як свабодную"
+msgstr "Паказваць памяць, ужытую пад буфер, як свабодную"
 
 #: ../src/interface.c:366
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask паходзіць з Xfce4 Task Manager, створаны:\n"
+"LXTask паходзіць з Xfce4 Task Manager, аўтарства:\n"
 "* Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:371
 msgid "translator-credits"
-msgstr "Анік Кіна <son_of_the_photographer@tut.by>"
+msgstr ""
+"Анік Кіна <son_of_the_photographer@tut.by>, 2010\n"
+"Мікалай Удодаў <crom-a@tut.by>, 2011."
 
 #: ../src/interface.c:380 ../src/interface.c:382
 msgid "LXTask"
@@ -201,19 +203,19 @@ msgstr "LXTask"
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:385
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "Copyright (C) 2008 LXDE team"
+msgstr "Аўтарскае права (C) 2008 каманда LXDE"
 
 #: ../src/interface.c:386
 msgid "Lightweight task manager for LXDE project"
-msgstr "Лёгкі дыспетчар задач для праекту LXDE"
+msgstr "Лёгкі менеджар задач для праекта LXDE"
 
 #: ../src/interface.c:595
 msgid "Preferences"
-msgstr "Налады"
+msgstr "Настаўленні"
 
 #: ../src/interface.c:599
 msgid "General"
-msgstr "Асноўнае"
+msgstr "Агульныя"
 
 #: ../src/interface.c:600
 msgid "Refresh rate (seconds):"
@@ -225,4 +227,4 @@ msgstr "Памылка"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr "Пацвярджэнне"
+msgstr "Пацверджанне"
