--- a/po/be.po
+++ b/po/be.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-27 19:22+0200\n"
-"PO-Revision-Date: 2011-08-07 16:11+0200\n"
+"PO-Revision-Date: 2011-08-09 23:34+0200\n"
 "Last-Translator: Мікалай <crom-a@tut.by>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: be\n"
@@ -45,7 +45,7 @@ msgstr ""
 #: ../src/xfce-taskmanager-linux.c:420
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Немагчыма ўстанавіць прыярытэт  %d для працэса з ID %d"
+msgstr "Немагчыма ўстанавіць прыярытэт %d для працэса з ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -87,7 +87,7 @@ msgstr "выкарыстанне памяці"
 
 #: ../src/interface.c:149
 msgid "more details"
-msgstr "Падрабязней"
+msgstr "падрабязней"
 
 #: ../src/interface.c:175
 msgid "Command"
@@ -187,7 +187,7 @@ msgid ""
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
 "LXTask паходзіць з Xfce4 Task Manager, аўтарства:\n"
-"* Johannes Zellner <webmaster@nebulon.de>"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:371
