--- a/po/et.po
+++ b/po/et.po
@@ -9,21 +9,23 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-27 19:22+0200\n"
-"PO-Revision-Date: 2009-01-19 09:56+0300\n"
-"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
+"PO-Revision-Date: 2011-09-06 11:02+0200\n"
+"Last-Translator: Anari <anari.jalakas@gmail.com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et linux ee>\n"
-"Language: \n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Töötavate protsesside haldamine"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Protsesside haldamine"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:55
 msgid "Task Manager"
@@ -207,15 +209,15 @@ msgstr "Sulgkerge protsessihaldur LXDE töölaua jaoks"
 
 #: ../src/interface.c:595
 msgid "Preferences"
-msgstr ""
+msgstr "Eelistused"
 
 #: ../src/interface.c:599
 msgid "General"
-msgstr ""
+msgstr "Üldine"
 
 #: ../src/interface.c:600
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Värskendussagedus (sekundites):"
 
 #: ../src/utils.c:43
 msgid "Error"
