--- a/po/nl.po
+++ b/po/nl.po
@@ -1,4 +1,4 @@
-# Dutch translation for the lxtask package.
+# Dutch translation of the lxtask package.
 # Copyright (C) the author of the lxtask package.
 # This file is distributed under the same license as the 
 # lxtask package.
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-27 19:22+0200\n"
-"PO-Revision-Date: 2011-06-13 11:34+0200\n"
+"PO-Revision-Date: 2011-09-08 11:34+0200\n"
 "Last-Translator: Pjotr\n"
 "Language-Team: Dutch\n"
 "Language: nl (Dutch)\n"
@@ -167,11 +167,11 @@ msgstr "   10"
 
 #: ../src/interface.c:320
 msgid "Show user tasks"
-msgstr "Toon gebruikertaken"
+msgstr "Toon gebruikerstaken"
 
 #: ../src/interface.c:325
 msgid "Show root tasks"
-msgstr "Toon beheerdertaken (root)"
+msgstr "Toon beheerderstaken (root)"
 
 #: ../src/interface.c:330
 msgid "Show other tasks"
