--- a/po/sl.po
+++ b/po/sl.po
@@ -1,26 +1,21 @@
-# Copyright (C) 2007 THE xfce4-taskmanager'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the xfce4-taskmanager package.
-# Jeff Bailes <thepizzaking@gmail.com>, 2007.
-# , fuzzy
-#
+# Slovenian translation of lxtask.
+# Copyright (C) 2011 Free Software Foundation, Inc.
+# This file is distributed under the same license as the lxtask package.
+# Klemen Košir <klemen.kosir@gmx.com>, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: LXTask 0.1\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-27 19:22+0200\n"
-"PO-Revision-Date: 2011-02-18 16:39+0200\n"
-"Last-Translator: Klemen <klemen.kosir@gmx.com>\n"
-"Language-Team: Slovenian <paxmanpwnz@gmail.com>\n"
+"PO-Revision-Date: 2011-11-25 16:16+0100\n"
+"Last-Translator: Klemen Košir <klemen.kosir@gmx.com>\n"
+"Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n"
-"%100==4 ? 3 : 0);\n"
-"X-Generator: Pootle 2.0.5\n"
-"X-Poedit-Language: Slovenian\n"
-"X-Poedit-Country: SLOVENIA\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n%100==4 ? 3 : 0);\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -30,7 +25,8 @@ msgstr "Upravljajte zagnana opravila"
 msgid "Process manager"
 msgstr "Upravljalnik opravil"
 
-#: ../lxtask.desktop.in.h:3 ../src/interface.c:55
+#: ../lxtask.desktop.in.h:3
+#: ../src/interface.c:55
 msgid "Task Manager"
 msgstr "Upravljalnik opravil"
 
@@ -41,14 +37,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Signala %d opravilu z ID-jem %d ni mogoče poslati\n"
+"Signala %d opravilu z ID-jem %d ni mogoče poslati.\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:420
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Prednosti %d opravilu z ID-jem %d ni mogoče nastaviti"
+msgstr "Prednosti %d opravilu z ID-jem %d ni mogoče nastaviti."
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -82,11 +78,11 @@ msgstr "Pomo_č"
 
 #: ../src/interface.c:110
 msgid "cpu usage"
-msgstr "zasedenost CPE"
+msgstr "Zasedenost CPE"
 
 #: ../src/interface.c:121
 msgid "memory usage"
-msgstr "zasedenost pomnilnika"
+msgstr "Zasedenost pomnilnika"
 
 #: ../src/interface.c:149
 msgid "more details"
@@ -102,15 +98,15 @@ msgstr "Uporabnik"
 
 #: ../src/interface.c:190
 msgid "CPU%"
-msgstr "CPE %"
+msgstr "CPE"
 
 #: ../src/interface.c:196
 msgid "RSS"
-msgstr "Sredstva"
+msgstr "Pomnilnik"
 
 #: ../src/interface.c:202
 msgid "VM-Size"
-msgstr "Poraba nav. pomn."
+msgstr "Velikost nav. pomn."
 
 #: ../src/interface.c:208
 msgid "PID"
@@ -130,7 +126,7 @@ msgstr "PPID"
 
 #: ../src/interface.c:242
 msgid "Stop"
-msgstr "Ustavi"
+msgstr "Zaustavi"
 
 #: ../src/interface.c:247
 msgid "Continue"
@@ -150,23 +146,23 @@ msgstr "Prednost"
 
 #: ../src/interface.c:275
 msgid "  -10"
-msgstr "  -10"
+msgstr "-10"
 
 #: ../src/interface.c:280
 msgid "  -5"
-msgstr "  -5"
+msgstr "-5"
 
 #: ../src/interface.c:285
 msgid "    0"
-msgstr "   0"
+msgstr "0"
 
 #: ../src/interface.c:290
 msgid "   5"
-msgstr "   5"
+msgstr "5"
 
 #: ../src/interface.c:295
 msgid "   10"
-msgstr "   10"
+msgstr "10"
 
 #: ../src/interface.c:320
 msgid "Show user tasks"
@@ -182,7 +178,7 @@ msgstr "Pokaži druga opravila"
 
 #: ../src/interface.c:335
 msgid "Show memory used by cache as free"
-msgstr "Pokaži pomnilnik, ki ga zaseda predpomnilnik, kot prostega"
+msgstr "Skrij zasedenost predpomnilnika"
 
 #: ../src/interface.c:366
 msgid ""
@@ -195,22 +191,21 @@ msgstr ""
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:371
 msgid "translator-credits"
-msgstr ""
-"Klemen Košir <https://launchpad.net/~klemen.kosir>\n"
-"paxman <paxmanpwnz@gmail.com>"
+msgstr "Klemen Košir <klemen.kosir@gmx.com>"
 
-#: ../src/interface.c:380 ../src/interface.c:382
+#: ../src/interface.c:380
+#: ../src/interface.c:382
 msgid "LXTask"
 msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:385
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "Avtorske pravice (C) 2008 ekipa LXDE"
+msgstr "Avtorske pravice © 2008 LXDE"
 
 #: ../src/interface.c:386
 msgid "Lightweight task manager for LXDE project"
-msgstr "Upravljalnik opravil za projekt LXDE"
+msgstr "Upravljalnik opravil za LXDE"
 
 #: ../src/interface.c:595
 msgid "Preferences"
@@ -230,4 +225,5 @@ msgstr "Napaka"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr "Potrdi"
+msgstr "Potrditev"
+
