--- a/po/he.po
+++ b/po/he.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-05 14:50+0800\n"
-"PO-Revision-Date: 2010-01-03 19:41+0100\n"
-"Last-Translator: ליאל פרידמן <lielft@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2011-06-27 19:22+0200\n"
+"PO-Revision-Date: 2011-11-13 15:44+0200\n"
+"Last-Translator: Yaron <sh.yaron@gmail.com>\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 1.1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -56,7 +56,7 @@ msgstr "באמת לחסל את המשימה?"
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "זכרון: %d מ\"ב מתוך %d מ\"ב בשימוש"
+msgstr "זכרון: %d מ״ב מתוך %d מ״ב בשימוש"
 
 #: ../src/functions.c:156
 #, c-format
@@ -194,7 +194,9 @@ msgstr ""
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
-msgstr "ירון שהרבני <sh.yaron@gmail.com>ליאל פרידמן <lielft@gmail.com>"
+msgstr ""
+"ירון שהרבני <sh.yaron@gmail.com>\n"
+"ליאל פרידמן <lielft@gmail.com>"
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
