--- a/po/ug.po
+++ b/po/ug.po
@@ -1,34 +1,32 @@
-# SOME DESCRIPTIVE TITLE.
+# Uyghur translation for lxtask.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Gheyret Kenji <gheyret@gmail.com>, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2010-06-08 18:12+0200\n"
-"Last-Translator: Gunleif <gunleif@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: fo\n"
+"PO-Revision-Date: 2011-11-09 16:10+0900\n"
+"Last-Translator: Gheyret Kenji <gheyret@gmail.com>\n"
+"Language-Team: Uyghur Computer Science Association <UKIJ@yahoogroups.com>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.1\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr "Umsit koyrandi tilgongdir"
+msgstr "ئىجرا بولۇۋاتقان ئىجرالارنى باشقۇرۇش"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr "Tilgongdar fyrisiting"
+msgstr "ئىجرا باشقۇرغۇ"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:55
 msgid "Task Manager"
-msgstr "Koyrslu fyrisiting"
+msgstr "ۋەزىپە باشقۇرغۇچ"
 
 #: ../src/xfce-taskmanager-linux.c:271
 #, c-format
@@ -37,64 +35,64 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Kundi ikki senda bákn %d til koyrsluna við ID %d\n"
+"سىگنال %d نى كىملىكى %d بولغان ۋەزىپىگە ئەۋەتكىلى بولمىدى\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Kundi ikki senda raðfesti %d til koyrsluna við ID %d"
+msgstr "مەرتىۋە %d نى كىملىكى %d بولغان ۋەزىپىگە بەلگىلىيەلمىدى"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr "Veruliga drepa koyrsluna?"
+msgstr "ۋەزىپىنى راستلا ئۆلتۈرەمسىز؟"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
-msgstr "Veruliga enda koyrsluna?"
+msgstr "ۋەزىپىنى راستلا توختىتامسىز؟"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Minni: %d MB av %d MB nýtt"
+msgstr "ئەسلەك: %d مېگابايت /%d مېگابايت ئىشلىتىلگەن"
 
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "CPU nýtsla: %0.0f %%"
+msgstr "CPU نىڭ ئىشلىتىلىشى: %0.0f %%"
 
 #: ../src/interface.c:69
 msgid "_File"
-msgstr "_Fíla"
+msgstr "ھۆججەت(_F)"
 
 #: ../src/interface.c:77
 msgid "_View"
-msgstr "_Vís"
+msgstr "كۆرۈنۈش(_V)"
 
 #: ../src/interface.c:83
 msgid "_Help"
-msgstr "_Hjálp"
+msgstr "ياردەم(_H)"
 
 #: ../src/interface.c:110
 msgid "cpu usage"
-msgstr "cpu nýtsla"
+msgstr "cpu نىڭ ئىشلىتىلىشى"
 
 #: ../src/interface.c:121
 msgid "memory usage"
-msgstr "minnisnýtsla"
+msgstr "ئەسلەكنىڭ ئىشلىتىلىشى"
 
 #: ../src/interface.c:149
 msgid "more details"
-msgstr "nágreinilig lýsing"
+msgstr "تېخىمۇ كوپ تەپسىلاتلار"
 
 #: ../src/interface.c:175
 msgid "Command"
-msgstr "Stýriboð"
+msgstr "بۇيرۇق"
 
 #: ../src/interface.c:181
 msgid "User"
-msgstr "Brúkari"
+msgstr "ئىشلەتكۈچى"
 
 #: ../src/interface.c:190
 msgid "CPU%"
@@ -106,7 +104,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:202
 msgid "VM-Size"
-msgstr "VM-stødd"
+msgstr "VM-Size"
 
 #: ../src/interface.c:208
 msgid "PID"
@@ -114,11 +112,11 @@ msgstr "PID"
 
 #: ../src/interface.c:214
 msgid "State"
-msgstr "Støða"
+msgstr "ھالەت"
 
 #: ../src/interface.c:220
 msgid "Prio"
-msgstr "Prio"
+msgstr "مەرتىۋە"
 
 #: ../src/interface.c:226
 msgid "PPID"
@@ -126,23 +124,23 @@ msgstr "PPID"
 
 #: ../src/interface.c:242
 msgid "Stop"
-msgstr "Steðga"
+msgstr "توختا"
 
 #: ../src/interface.c:247
 msgid "Continue"
-msgstr "Halt fram"
+msgstr "داۋاملاشتۇر"
 
 #: ../src/interface.c:252
 msgid "Term"
-msgstr "Enda"
+msgstr "ئاتالغۇ"
 
 #: ../src/interface.c:257
 msgid "Kill"
-msgstr "Drep"
+msgstr "ئاخىرلاشتۇر"
 
 #: ../src/interface.c:262
 msgid "Priority"
-msgstr "Raðfesti"
+msgstr "مەرتىۋە"
 
 #: ../src/interface.c:275
 msgid "  -10"
@@ -166,15 +164,15 @@ msgstr "   10"
 
 #: ../src/interface.c:321
 msgid "Show user tasks"
-msgstr "Vís brúkara koyrslur"
+msgstr "ئىشلەتكۈچىنىڭ ۋەزىپىلىرىنى كۆرسىتىش"
 
 #: ../src/interface.c:326
 msgid "Show root tasks"
-msgstr "Vís rótakoyrslur"
+msgstr "ئالىي ئىشلەتكۈچى(root)نىڭ ۋەزىپىلىرىنى كۆرسىتىش"
 
 #: ../src/interface.c:331
 msgid "Show other tasks"
-msgstr "Vís aðrar koyrslur"
+msgstr "باشقا ۋەزىپىلەرنى كۆرسىتىش"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
@@ -182,24 +180,21 @@ msgstr ""
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
-msgstr "Vís minnið nýtt av kovanum sum verandi tøkt"
+msgstr "غەملەك تەرىپىدىن ئىشلىتىلگەن ئەسلەكنى بىكار بىكار بوشلۇق دەپ كۆرسىتىش"
 
 #: ../src/interface.c:373
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask hevur sín uppruna úr Xfce4 Task Manager av:\n"
-"  * Johannes Zellner <webmaster@nebulon.de>"
+"LXTask بولسا Xfce4 ۋەزىپە باشقۇرغۇ(Xfce4 Task Manager) ئاساسىدا ياسالغان. "
+"ئاپتور:\\n\n"
+"* Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
-msgstr ""
-"Gunleif Joensen\n"
-"\n"
-"Sjónarmið viðvíkjandi týðingini kunnu sendast til:\n"
-"<fo.umseting@gmail.com>"
+msgstr "Gheyret Kenji <gheyret@gmail.com>"
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
@@ -208,28 +203,28 @@ msgstr "LXTask"
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:392
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "Upphavsrætt (C) 2008 LXDE-liðið"
+msgstr "نەشر ھوقۇقى (C) 2008 LXDE ئەترىتى"
 
 #: ../src/interface.c:393
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lættvekts koyrlsu fyrisiting fyri LXDE verkætlaninna"
+msgstr "LXDE قۇرۇلۇشىدىكى يېنىك ۋەزىپە باشقۇرغۇ"
 
 #: ../src/interface.c:621
 msgid "Preferences"
-msgstr "Sertokkar"
+msgstr "مايىللىق"
 
 #: ../src/interface.c:625
 msgid "General"
-msgstr "Alment"
+msgstr "ئادەتتىكى"
 
 #: ../src/interface.c:626
 msgid "Refresh rate (seconds):"
-msgstr "Afturkomuferð (sekund):"
+msgstr "يېڭىلاش تېزلىكى(سېكۇنت):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr "Brek"
+msgstr "خاتالىق"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr "Vátta"
+msgstr "جەزملە"
