--- a/po/sl.po
+++ b/po/sl.po
@@ -8,15 +8,16 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-11-25 16:16+0100\n"
-"Last-Translator: Klemen Košir <klemen.kosir@gmx.com>\n"
+"PO-Revision-Date: 2012-01-05 17:06+0200\n"
+"Last-Translator: Klemen <klemen.kosir@gmx.com>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n"
-"%100==4 ? 3 : 0);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || "
+"n%100==4 ? 3 : 0);;\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -37,14 +38,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Signala %d opravilu z ID-jem %d ni mogoče poslati.\n"
+"Signala %d opravilu s številko %d ni mogoče poslati.\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Prednosti %d opravilu z ID-jem %d ni mogoče nastaviti."
+msgstr "Prednosti %d opravilu s številko %d ni mogoče nastaviti."
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
@@ -178,7 +179,7 @@ msgstr "Pokaži druga opravila"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Pokaži ukazno vrstico"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
@@ -189,8 +190,9 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask je iz projekta Xfce4 Task Manager izpeljal:\n"
-"  * Johannes Zellner <webmaster@nebulon.de>"
+"Avtor:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>LXTask je izpeljan iz "
+"upravljalnika opravil za Xfce 4."
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
