--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-12-24 14:04+0200\n"
+"PO-Revision-Date: 2012-01-05 18:17+0200\n"
 "Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Proxecto Trasno <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -178,7 +178,7 @@ msgstr "Amosar outras tarefas"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Amosar a liña de ordes completa"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
