Commit from LXDE Translation Project with Pootle by user JSonic.: 49 of 49 messages translated (0 fuzzy).

--- a/po/fi.po
+++ b/po/fi.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2012-02-16 18:37+0200\n"
-"Last-Translator: GoaHead <b7701050@nwldx.com>\n"
+"PO-Revision-Date: 2012-03-23 15:20+0200\n"
+"Last-Translator: Juhani <juhaninumminen0@gmail.com>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -191,8 +191,8 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask on johdettu Xfce 4 tehtävienhallinnasta\n"
-"Johannes Zellnerin <webmaster@nebulon.de> toimesta."
+"LXTask on johdettu Xfce 4 tehtävienhallinnasta, tekijä:\n"
+"  * Johannes Zellnerin <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
